added Isomorphic functionality

--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -8,6 +8,11 @@
 			<li>/file/sample.html -- returns the content of the file sample.html</li>
 			<li>/json -- returns a json of the /random request</a></li>
 			<li>/random -- returns index.html</a></li>
+			<li>/GCD -- returns the greatest common divisor of two numbers. For instance, /GCD?num1=45&num2=5 will return 5</li>
+			<li>/Isomorphic -- returns true if two input strings are isomorphic. Two words are considered isomorphic if the letters of the first word can be swapped out 
+			<br />to create the second word. All occurances of a single letter must be swapped with the same letter, and no two letters can be swapped to the same character.
+			<br />For example: /Isomorphic?str1=egg&str2=add will return true, because the 'e' in "egg can be swapped with an 'a', and the 'g's can be swapped with 'd's
+			<br />to create "add"</li>
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
